<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="pick_your_category_n_of_interest">Pick Your Category \n Of Interest</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="spinner_array">
        <item>Select Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string name="setting">Setting</string>
    <string name="Categories">Categories</string>
    <string name="Sports">Sports</string>
    <string name="Science">Science</string>
    <string name="Politic">Politic</string>
    <string name="Business">Business</string>
    <string name="Health">Health</string>
    <string name="Environment">Environment</string>
    <string name="news_app">News App</string>
    <string name="language">Language</string>
    <string name="view_full_article">View Full Article</string>
    <string name="news_title">News Title</string>
</resources>