<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_screens"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/pick_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pick_your_category_n_of_interest"
        android:padding="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

        <ImageView
            android:id="@+id/sports"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/sports"
            app:layout_constraintTop_toBottomOf="@id/pick_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/politics"
            />
    <TextView
        android:id="@+id/sports_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sports"
        app:layout_constraintBottom_toBottomOf="@id/sports"
        app:layout_constraintStart_toStartOf="@id/sports"
        app:layout_constraintEnd_toEndOf="@id/sports"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

        <ImageView
            android:id="@+id/politics"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/politics"
            app:layout_constraintStart_toEndOf="@id/sports"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/sports"
            app:layout_constraintBottom_toBottomOf="@id/sports"
            />
    <TextView
        android:id="@+id/politics_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Politic"
        app:layout_constraintBottom_toBottomOf="@id/politics"
        app:layout_constraintStart_toStartOf="@id/politics"
        app:layout_constraintEnd_toEndOf="@id/politics"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

            <ImageView
                android:id="@+id/health"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/health"
                app:layout_constraintTop_toBottomOf="@id/sports"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/politics"
                android:layout_marginTop="10dp"
                />
    <TextView
        android:id="@+id/health_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Health"
        app:layout_constraintBottom_toBottomOf="@id/health"
        app:layout_constraintStart_toStartOf="@id/health"
        app:layout_constraintEnd_toEndOf="@id/health"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

           <ImageView
               android:id="@+id/business"
               android:layout_width="0dp"
               android:layout_height="150dp"
               android:layout_weight="1"
               android:adjustViewBounds="true"
               android:src="@drawable/business"
               app:layout_constraintStart_toEndOf="@id/health"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="@id/health"
               app:layout_constraintBottom_toBottomOf="@id/health"
               />
    <TextView
        android:id="@+id/business_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Business"
        app:layout_constraintBottom_toBottomOf="@id/business"
        app:layout_constraintStart_toStartOf="@id/business"
        app:layout_constraintEnd_toEndOf="@id/business"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

               <ImageView
                   android:id="@+id/environment"
                   android:layout_width="0dp"
                   android:layout_height="150dp"
                   android:layout_weight="1"
                   android:adjustViewBounds="true"
                   android:src="@drawable/enviroment"
                   app:layout_constraintTop_toBottomOf="@id/health"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toStartOf="@id/science"
                   android:layout_marginTop="10dp"
                   />
    <TextView
        android:id="@+id/environment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Environment"
        app:layout_constraintBottom_toBottomOf="@id/environment"
        app:layout_constraintStart_toStartOf="@id/environment"
        app:layout_constraintEnd_toEndOf="@id/environment"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

               <ImageView
                   android:id="@+id/science"
                   android:layout_width="0dp"
                   android:layout_height="150dp"
                   android:layout_weight="1"
                   android:adjustViewBounds="true"
                   android:src="@drawable/science"
                   app:layout_constraintStart_toEndOf="@id/environment"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="@id/environment"
                   app:layout_constraintBottom_toBottomOf="@id/environment"
                   />
    <TextView
        android:id="@+id/science_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Science"
        app:layout_constraintBottom_toBottomOf="@id/science"
        app:layout_constraintStart_toStartOf="@id/science"
        app:layout_constraintEnd_toEndOf="@id/science"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>